--- a/aboutus.html
+++ b/aboutus.html
@@ -85,8 +85,8 @@
     <!-- ENDNAVBAR -->
 
     <!-- BIGBANNER -->
-    <section id="bigBanner">
-        <img src="img/image_project.jpg" alt="image_banner" width="100%">
+    <section id="bigBanner" class="big_banner">
+        <img src="img/image_project.jpg" alt="image_banner" class="image_banner">
     </section>
     <!-- ENDBIGBANNER -->
 
