--- a/aboutus.html
+++ b/aboutus.html
@@ -86,7 +86,7 @@
 
     <!-- BIGBANNER -->
     <section id="bigBanner" class="big_banner">
-        <img src="img/image_project.jpg" alt="image_banner" class="image_banner">
+        <img src="img/bg_crop.png" alt="image_banner" class="image_banner">
     </section>
     <!-- ENDBIGBANNER -->
 
