--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     <a href="about.html" class="menu-item">
                         <span>About Us</span>
                     </a>
-                    <a href="#" class="menu-item">
+                    <a href="howitworks.html" class="menu-item">
                         <span>How It Works</span>
                     </a>
-                    <a href="#" class="menu-item">
+                    <a href="products.html" class="menu-item">
                         <span>Services</span>
                     </a>
-                    <a href="#" class="menu-item">
+                    <a href="contactus.html" class="menu-item">
                         <span>Contact Us</span>
                     </a>
                 </div>
