--- a/howitworks.html
+++ b/howitworks.html
@@ -52,7 +52,7 @@
                     <h2 class="title">How It Works</h2>
                 </div>
                 <div class="col">
-                    <img src="assets/img/howitworks.png" alt="" style="margin-top: -75px;">
+                    <img src="assets/img/howitworks.png" alt="" style="margin-top: -75px; float: right;">
                 </div>
             </div>
         </div>
