--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
                     </a>
                 </div>
             </nav>
+            <div class="sidebar">
+                <a href="index.html" class="menu-item">
+                    <span>Home</span>
+                </a>
+                <a href="about.html" class="menu-item">
+                    <span>About Us</span>
+                </a>
+                <a href="howitworks.html" class="menu-item">
+                    <span>How It Works</span>
+                </a>
+                <a href="products.html" class="menu-item">
+                    <span>Services</span>
+                </a>
+                <a href="contactus.html" class="menu-item">
+                    <span>Contact Us</span>
+                </a>
+            </div>
         </div>
     </header>
 
@@ -67,7 +84,7 @@
         <div class="container">
             <div class="card">
                 <div class="col">
-                    <h2 class="title">
+                    <h2 class="title" data-from="0" data-to="30" data-append="K+">
                         30K+
                     </h2>
                     <h6 class="subtitle">
@@ -75,7 +92,7 @@
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title">
+                    <h2 class="title" data-from="0" data-to="200" data-append="+">
                         200+
                     </h2>
                     <h6 class="subtitle">
@@ -83,7 +100,7 @@
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title">
+                    <h2 class="title" data-from="0" data-to="25" data-append="K+">
                         25K+
                     </h2>
                     <h6 class="subtitle">
@@ -91,7 +108,7 @@
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title">
+                    <h2 class="title" data-from="0" data-to="30" data-append="%">
                         30%+
                     </h2>
                     <h6 class="subtitle">
@@ -121,7 +138,7 @@
                         <img src="assets/icon/data_collection_icon.png" alt="" srcset="">
                         <h3 class="title">Data Collection</h3>
                         <p class="subtitle">We created a tool to assist in the digitization of data gathering methods that may be used in any project.</p>
-                        <button class="button-learn-more">LEARN MORE</button>
+                        <a href="products/g-collect.html" class="button-learn-more">LEARN MORE</a>
                     </div>
                 </div>
                 <div class="col">
@@ -129,7 +146,7 @@
                         <img src="assets/icon/monitor_tracking_icon.png" alt="" srcset="">
                         <h3 class="title">Monitoring & Tracking</h3>
                         <p class="subtitle">Our set of tools helps with on-the-ground monitoring and activity tracking to ensure that everything runs well.</p>
-                        <button class="button-learn-more">LEARN MORE</button>
+                        <a href="products/more-sustainable.html" class="button-learn-more">LEARN MORE</a>
                     </div>
                 </div>
                 <div class="col">
@@ -137,7 +154,7 @@
                         <img src="assets/icon/prediction_icon.png" alt="" srcset="">
                         <h3 class="title">Prediction & Machine Learning</h3>
                         <p class="subtitle">To improve efficiency, we use machine learning to assist with data analysis and prediction.</p>
-                        <button class="button-learn-more">LEARN MORE</button>
+                        <a href="products/envi-is-solution.html" class="button-learn-more">LEARN MORE</a>
                     </div>
                 </div>
             </div>
