--- a/about.html
+++ b/about.html
@@ -130,30 +130,38 @@
         </div>
     </section>
 
-    <section class="mb-4">
+    <section id="ourNumber" class="mb-4">
         <div class="container">
             <h3 class="head-title text-color-dark" style="font-size: 40px;">Our Number</h3>
             <hr>
             <div class="d-flex text-center mt-4 mb-4">
                 <div class="col">
-                    <span>Training Given</span>
-                    <h3>500+</h3>
-                    <span>PEOPLES</span>
+                    <span class="subtitle">Training Given</span>
+                    <h2 class="title number" data-current="0" data-to="500" data-append="+">
+                        0
+                    </h2>
+                    <span class="description">PEOPLES</span>
                 </div>
                 <div class="col">
-                    <span>Training Given</span>
-                    <h3>500+</h3>
-                    <span>PEOPLES</span>
+                    <span class="subtitle">Beneficiaries</span>
+                    <h2 class="title number" data-current="0" data-to="25" data-append="K+">
+                        0
+                    </h2>
+                    <span class="description">PEOPLES</span>
                 </div>
                 <div class="col">
-                    <span>Training Given</span>
-                    <h3>500+</h3>
-                    <span>PEOPLES</span>
+                    <span class="subtitle">Job Created</span>
+                    <h2 class="title number" data-current="0" data-to="250" data-append="+">
+                        0
+                    </h2>
+                    <span class="description">JOBS</span>
                 </div>
                 <div class="col">
-                    <span>Training Given</span>
-                    <h3>500+</h3>
-                    <span>PEOPLES</span>
+                    <span class="subtitle">Waste Collected</span>
+                    <h2 class="title number" data-current="0" data-to="500" data-append="+">
+                        0
+                    </h2>
+                    <span class="description">METRIC TONS</span>
                 </div>
             </div>
             <hr>
