--- a/index.html
+++ b/index.html
@@ -84,32 +84,32 @@
         <div class="container">
             <div class="card">
                 <div class="col">
-                    <h2 class="title" data-from="0" data-to="30" data-append="K+">
-                        30K+
+                    <h2 class="title number" data-current="0" data-to="30" data-append="K+">
+                        0
                     </h2>
                     <h6 class="subtitle">
                         MANAGED WASTE BY PARTNER
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title" data-from="0" data-to="200" data-append="+">
-                        200+
+                    <h2 class="title number" data-current="0" data-to="200" data-append="+">
+                        0
                     </h2>
                     <h6 class="subtitle">
                         LOCATIONS REACHED
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title" data-from="0" data-to="25" data-append="K+">
-                        25K+
+                    <h2 class="title number" data-current="0" data-to="25" data-append="K+">
+                        0
                     </h2>
                     <h6 class="subtitle">
                         REGISTERED USER
                     </h6>
                 </div>
                 <div class="col">
-                    <h2 class="title" data-from="0" data-to="30" data-append="%">
-                        30%+
+                    <h2 class="title number" data-current="0" data-to="30" data-append="%">
+                        0
                     </h2>
                     <h6 class="subtitle">
                         LIVELIHOOD IMPROVEMENTS
