--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
                 <div class="left">
                     <img src="assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
-                <div class="right">
+                <div class="right d-none-mobile">
                     <a href="index.html" class="menu-item">
                         <span>Home</span>
                     </a>
@@ -47,19 +47,19 @@
 
     <section class="section_banner">
         <div class="container">
-            <div class="d-flex mb-4" style="padding: 4rem;">
+            <div class="d-flex mb-4 p-4">
                 <div class="col">
                     <h2 class="title">Our Products</h2>
-                    <a href="contactus.html." class="button-learn-more">Contact Us</a>
+                    <a href="contactus.html" class="button-learn-more">Contact Us</a>
                 </div>
-                <div class="col">
+                <div class="col d-none-mobile">
                     <img src="assets/img/lamp.svg" alt="" style="margin-left: 10rem;">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section_2_columns_with_image" style="background-color: #FFFADD; padding: 3rem; padding: 3rem; height: 400px; overflow: hidden;">
+    <section class="section_2_columns_with_image d-none-mobile" style="background-color: #FFFADD; padding: 3rem; padding: 3rem; height: 400px; overflow: hidden;">
         <div class="container">
             <div class="d-flex">
                 <div class="col">
@@ -75,7 +75,21 @@
         </div>
     </section>
 
-    <section class="section_2_columns_with_image" style="background-color: #FBE2EB; padding: 3rem; padding: 3rem; height: 400px; overflow: hidden;">
+    <section style="background-color: #FFFADD; padding: 1rem; min-height: 400px;">
+        <div class="container">
+            <div>
+                <div class="col">
+                    <img src="../assets/img/g-collect.png" alt="" style="width: 90%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">G-Collect is an easy way to collect data</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">G-Collect is integrated into the Gringgo platform database to make it easy for you to find any type of data you need.</p>
+                </div>
+            </div>
+    </section>
+
+    <section class="section_2_columns_with_image d-none-mobile" style="background-color: #FBE2EB; padding: 3rem; padding: 3rem; height: 400px; overflow: hidden;">
         <div class="container">
             <div class="d-flex">
                 
@@ -93,8 +107,23 @@
         </div>
     </section>
 
+    <section style="background-color: #FBE2EB; padding: 1rem; min-height: 400px;">
+        <div class="container">
+            <div>
+                <div class="col">
+                    <img src="../assets/img/suistan.png" alt="" style="width: 90%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Create a more sustainable future with SWAI</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">
+                        SWAI is a mobile application that promotes a change of behavior about sustainability and environment awareness.    
+                    </p>
+                </div>
+            </div>
+    </section>
 
-    <section class="section_2_columns_with_image" style="background-color: #D5F9F3; padding: 3rem; height: 400px; overflow: hidden;">
+    <section class="section_2_columns_with_image d-none-mobile" style="background-color: #D5F9F3; padding: 3rem; height: 400px; overflow: hidden;">
         <div class="container">
             <div class="d-flex">
                 <div class="col">
@@ -110,9 +139,24 @@
         </div>
     </section>
 
+    <section style="background-color: #D5F9F3; padding: 1rem; min-height: 400px;">
+        <div class="container">
+            <div>
+                <div class="col">
+                    <img src="../assets/img/envi.png" alt="" style="width: 90%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">ENVI is the solution <br> to your sustainability woes</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">
+                        With ENVI, you can monitor the status of your on the ground operation with just a few clicks and changes. 
+                    </p>
+                </div>
+            </div>
+    </section>
     
     <footer>
-        <div class="container">
+        <div class="container d-none-mobile">
             <div class="footer-contain">
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
@@ -148,6 +192,52 @@
                     <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="small-footer font-inter-regular">
+                <span>Gringgo©  2022</span>
+                <span> All Right Reserved</span>
+            </div>
+        </div>
+        <div class="container d-none-desktop">
+            <div class="footer-mobile">
+                <div>
+                    <img src="assets/img/logo-gringgo.png" alt="">
+                    <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
+                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
+                        <ul class="menu">
+                            <li>About</li>
+                            <li>Contact Us</li>
+                            <li>Support Us</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
+                        <ul class="menu">
+                            <li>Environtment</li>
+                            <li>People</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
+                        <ul class="menu">
+                            <li>Privacy Policy</li>
+                            <li>Terms Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Connect Us</p>
+                        <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
