--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
                 <div class="left">
                     <img src="assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
-                <div class="right">
+                <div class="right d-none-mobile">
                     <a href="index.html" class="menu-item">
                         <span>Home</span>
                     </a>
@@ -45,9 +45,8 @@
         </div>
     </header>
 
-    
     <footer>
-        <div class="container">
+        <div class="container d-none-mobile">
             <div class="footer-contain">
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
@@ -83,6 +82,52 @@
                     <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="small-footer font-inter-regular">
+                <span>Gringgo©  2022</span>
+                <span> All Right Reserved</span>
+            </div>
+        </div>
+        <div class="container d-none-desktop">
+            <div class="footer-mobile">
+                <div>
+                    <img src="assets/img/logo-gringgo.png" alt="">
+                    <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
+                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
+                        <ul class="menu">
+                            <li>About</li>
+                            <li>Contact Us</li>
+                            <li>Support Us</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
+                        <ul class="menu">
+                            <li>Environtment</li>
+                            <li>People</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
+                        <ul class="menu">
+                            <li>Privacy Policy</li>
+                            <li>Terms Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Connect Us</p>
+                        <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
