--- a/howitworks.html
+++ b/howitworks.html
@@ -24,7 +24,7 @@
                 <div class="left">
                     <img src="assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
-                <div class="right">
+                <div class="right d-none-mobile">
                     <a href="index.html" class="menu-item">
                         <span>Home</span>
                     </a>
@@ -37,7 +37,7 @@
                     <a href="products.html" class="menu-item">
                         <span>Services</span>
                     </a>
-                    <a href="contactus.html" class="menu-item">
+                    <a href="contactus.html" class="menu-item text-active">
                         <span>Contact Us</span>
                     </a>
                 </div>
@@ -51,14 +51,28 @@
                 <div class="col">
                     <h2 class="title">How It Works</h2>
                 </div>
-                <div class="col">
+                <div class="col d-none-mobile">
                     <img src="assets/img/howitworks.png" alt="" style="margin-top: -75px; float: right;">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="section_2_columns_with_image">
+    <section class="d-none-desktop">
+        <div class="container">
+            <div>
+                <div>
+                    <img src="assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="" style="width: 100%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Sustainability Compliance</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">Gringgo has developed a platform for companies to gather data, track and monitor their operations, and to achieve sustainability compliance using defined ESG metrics. This will help you stay compliant with global standards and ensure you stay ahead of the curve.</p>
+                </div>
+            </div>
+    </section>
+
+    <section class="section_2_columns_with_image d-none-mobile">
         <div class="container">
             <div class="d-flex">
                 <div class="col">
@@ -74,7 +88,21 @@
         </div>
     </section>
 
-    <section class="section_2_columns_with_image" style="background-color: #D5F9F3;">
+    <section class="d-none-desktop">
+        <div class="container">
+            <div>
+                <div>
+                    <img src="assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="" style="width: 100%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Education on Sustainability</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">Our platform facilitates the necessary knowledge to build skills, awareness, values and activities surrounding sustainability. As part of the community that care, Gringgo developed a unique gamification methods to help more than 25,000 its users learn about different type of waste and how to deal with them.</p>
+                </div>
+            </div>
+    </section>
+
+    <section class="section_2_columns_with_image d-none-mobile" style="background-color: #D5F9F3;">
         <div class="container">
             <div class="d-flex">
                 <div class="col content-text">
@@ -90,7 +118,21 @@
         </div>
     </section>
 
-    <section class="section_2_columns_with_image">
+    <section class="d-none-desktop">
+        <div class="container">
+            <div>
+                <div>
+                    <img src="assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="" style="width: 100%; height: inherit;">
+                </div>
+                <div class="col content-text">
+                    <!-- <hr class="line-on-top-title" style="float: left; border: none;"> -->
+                    <h4 class="title mt-2" style="font-family: 'Inter';font-style: normal;font-weight: 800;font-size: 40px;margin-top: 50px;margin-bottom: 20px;color: #232323;">Sustainability Program</h4>
+                    <p class="description" style="font-family: 'Inter';font-style: normal;font-weight: 400;font-size: 20px;line-height: 160%;color: #232323;">One important elements in creating solution for sustainability issue is community, through our platform we reached out to different communities and created different customized program to raise awareness about sustainability. </p>
+                </div>
+            </div>
+    </section>
+
+    <section class="section_2_columns_with_image d-none-mobile">
         <div class="container">
             <div class="d-flex">
                 <div class="col">
@@ -106,9 +148,8 @@
         </div>
     </section>
 
-    
     <footer>
-        <div class="container">
+        <div class="container d-none-mobile">
             <div class="footer-contain">
                 <div>
                     <img src="assets/img/logo-gringgo.png" alt="">
@@ -144,6 +185,52 @@
                     <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
                     <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                </div>
+            </div>
+            <div class="small-footer font-inter-regular">
+                <span>Gringgo©  2022</span>
+                <span> All Right Reserved</span>
+            </div>
+        </div>
+        <div class="container d-none-desktop">
+            <div class="footer-mobile">
+                <div>
+                    <img src="assets/img/logo-gringgo.png" alt="">
+                    <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
+                        Gringgo is home to a new economic model for waste management that puts people and the planet first.
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Company</p>
+                        <ul class="menu">
+                            <li>About</li>
+                            <li>Contact Us</li>
+                            <li>Support Us</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Service</p>
+                        <ul class="menu">
+                            <li>Environtment</li>
+                            <li>People</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Legal</p>
+                        <ul class="menu">
+                            <li>Privacy Policy</li>
+                            <li>Terms Conditions</li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <p class="font-inter-bold title" style="font-size: 18px;">Connect Us</p>
+                        <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
+                        <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                    </div>
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
