--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <img src="assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
                 <div class="right d-none-mobile">
-                    <a href="index.html" class="menu-item">
+                    <a href="index.html" class="menu-item text-active">
                         <span>Home</span>
                     </a>
-                    <a href="about.html" class="menu-item text-active">
+                    <a href="about.html" class="menu-item">
                         <span>About Us</span>
                     </a>
                     <a href="howitworks.html" class="menu-item">
