--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
         </div>
     </section>
 
-    <section style="background-color: #FFFADD; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop" style="background-color: #FFFADD; padding: 1rem; min-height: 400px;">
         <div class="container">
             <div>
                 <div class="col">
@@ -107,7 +107,7 @@
         </div>
     </section>
 
-    <section style="background-color: #FBE2EB; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop" style="background-color: #FBE2EB; padding: 1rem; min-height: 400px;">
         <div class="container">
             <div>
                 <div class="col">
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <section style="background-color: #D5F9F3; padding: 1rem; min-height: 400px;">
+    <section class="d-none-desktop" style="background-color: #D5F9F3; padding: 1rem; min-height: 400px;">
         <div class="container">
             <div>
                 <div class="col">
