--- a/how-it-works/sustainability-progmrams.html
+++ b/how-it-works/sustainability-progmrams.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRINGGO</title>
 
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/master.css">
-    <link rel="stylesheet" href="assets/css/text-styling.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/master.css">
+    <link rel="stylesheet" href="../assets/css/text-styling.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
         <div class="container">
             <nav class="d-flex justify-content-between">
                 <div class="left">
-                    <img src="assets/img/logo-gringgo.png" alt="logo_gringgi">
+                    <img src="../assets/img/logo-gringgo.png" alt="logo_gringgi">
                 </div>
                 <div class="right">
                     <a href="index.html" class="menu-item">
@@ -52,7 +52,7 @@
                     <h2 class="title">How It Works</h2>
                 </div>
                 <div class="col">
-                    <img src="assets/img/howitworks.png" alt="" style="margin-top: -75px;">
+                    <img src="../assets/img/howitworks.png" alt="" style="margin-top: -75px;">
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="d-flex">
                 <div class="col">
-                    <img src="assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="">
+                    <img src="../assets/img/b80428ac-2f93-4b9e-9fbb-ae0464e98289.png" alt="">
                 </div>
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
@@ -84,7 +84,7 @@
                     <a href="how-it-works/education-on-sustainability.html" class="button-learn-more">LEARN MORE</a>
                 </div>
                 <div class="col">
-                    <img src="assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="">
+                    <img src="../assets/img/aeb81604-4fd3-44f9-a3ed-b1fc28b78892.png" alt="">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="d-flex">
                 <div class="col">
-                    <img src="assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="">
+                    <img src="../assets/img/8d5f4ff7-fca3-41f6-8385-6eb7326e3fec.png" alt="">
                 </div>
                 <div class="col content-text">
                     <hr class="line-on-top-title" style="float: left;">
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="footer-contain">
                 <div>
-                    <img src="assets/img/logo-gringgo.png" alt="">
+                    <img src="../assets/img/logo-gringgo.png" alt="">
                     <p class="font-inter-regular" style="font-size: 16px; line-height: 160%;">
                         Gringgo is home to a new economic model for waste management that puts people and the planet first.
                     </p>
@@ -141,9 +141,9 @@
                 </div>
                 <div>
                     <p class="font-inter-bold title" style="font-size: 18px;">Connect With Us</p>
-                    <img class="icon-sosmed" src="assets/icon/youtube.png" alt="">
-                    <img class="icon-sosmed" src="assets/icon/facebook.png" alt="">
-                    <img class="icon-sosmed" src="assets/icon/instagram.png" alt="">
+                    <img class="icon-sosmed" src="../assets/icon/youtube.png" alt="">
+                    <img class="icon-sosmed" src="../assets/icon/facebook.png" alt="">
+                    <img class="icon-sosmed" src="../assets/icon/instagram.png" alt="">
                 </div>
             </div>
             <div class="small-footer font-inter-regular">
@@ -153,6 +153,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
